# Prmpt

./: .gitignore  .gitmodules  CLAUDE.md  README.md  index.html  package.json  tsconfig.json
.github/workflows/: release.yml
scripts/: bump.ts  configure-windows-signing.sh  lipo-bundle-dylib.sh  setup-vendor.sh  sign-windows.sh
src/: App.vue  console-forward.ts  contextMenu.ts  db.ts  input.ts  ipc.ts  main.ts  secrets.ts  styles.css  updater.ts
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_stronghold.sql  0003_broken_flag.sql  0004_groups.sql  0005_group_flags.sql  0006_disable_sftp.sql  0007_disable_ssh.sql  0008_sync.sql  0009_workspaces.sql
src-tauri/src/: backup.rs  commands.rs  config.rs  db_compat.rs  error.rs  git.rs  keymap.rs  lib.rs  localfs.rs  macos.rs  main.rs  osc_notify.rs  paths.rs  platform.rs  protocol.rs  secret_store.rs  ssh.rs  stronghold.rs  sync.rs  tab.rs  window_pool.rs
src-tauri/src/data_migrations/: mod.rs  v001_unify_data_dir.rs
src-tauri/src/secure_store/: android.rs  apple.rs  linux.rs  mod.rs  windows.rs
src/audio/: chime.ts
src/components/: CommandPalette.vue  CustomTheme.vue  DragGhost.vue  FilesPanel.vue  FloatingMenu.vue  FontStackInput.vue  FullDiskAccessModal.vue  GitPanel.vue  GroupTree.vue  HidePinDialogs.vue  HomeView.vue  HostEdit.vue  HostKeyFirstConnectModal.vue  HostKeyMismatchModal.vue  HostList.vue  KeyEdit.vue  KeyList.vue  LocalBrowser.vue  LocalPanel.vue  NotificationCenter.vue  PaneTitlebar.vue  PassphrasePromptModal.vue  Settings.vue  SftpBrowser.vue  SftpPanel.vue  SshConnectErrorModal.vue  SyncStatusIcon.vue  TabBar.vue  TerminalScrollbar.vue  TerminalView.vue  ThemePresets.vue  TitleBar.vue  Toasts.vue  UpdateIcon.vue  UpdateModal.vue
src/components/ui/: ActionMenu.vue  Badge.vue  Button.vue  Card.vue  Checkbox.vue  ConfirmDialog.vue  DropdownMenu.vue  EmptyState.vue  ErrorMessage.vue  FormRow.vue  Input.vue  Label.vue  Modal.vue  PageHeader.vue  Scrollbar.vue  Switch.vue  Textarea.vue  Tooltip.vue  index.ts
src/components/welcome/: HelloAnimation.vue  StepFda.vue  StepImport.vue  WelcomeOverlay.vue
src/composables/: useBackupImport.ts  useDomScroll.ts  useTerminalScroll.ts
src/lib/: crumbs.ts  editable.ts  groupTree.ts  urlDetect.ts
src/renderer/: canvas2d.ts  glyph-atlas.ts  index.ts  shaders.ts  webgl.ts
src/state/: closeGuard.ts  commandPalette.ts  commands.ts  connect.ts  drag.ts  fileBrowser.ts  fileColumns.ts  filesPanel.ts  floatingMenu.ts  gitPanel.ts  inputContextMenu.ts  keybindings.ts  links.ts  localBrowser.ts  notifications.ts  paneHighlight.ts  panels.ts  passphrase-prompt.ts  savedWorkspaces.ts  secrets.ts  sftp.ts  sftpConsumers.ts  sync.ts  tabs.ts  terminal.ts  terminalContextMenu.ts  theme.ts  themes.ts  toasts.ts  transfers.ts  uiPrefs.ts  update.ts  windowFocus.ts  workspace.ts
