[package]
name = "prmpt"
version = "0.2.3"
description = "A terminal emulator built on Tauri + libghostty-vt"
authors = ["Yanick"]
edition = "2021"
rust-version = "1.93"

[lib]
name = "prmpt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libghostty-vt = "0.1"
# Declared as a direct dep (in addition to the transitive use via
# `libghostty-vt`) so the build script can read
# `DEP_GHOSTTY_VT_LIBDIR` / `DEP_GHOSTTY_VT_LIB_FILENAME` to stage the
# dylib for macOS bundling. See src-tauri/build.rs.
libghostty-vt-sys = "0.1"
toml = "0.8"
thiserror = "1"
anyhow = "1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
directories = "5"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "io-util", "time", "net"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-stronghold = "2"
# `relaunch()` after an in-place update install. Works on all targets.
tauri-plugin-process = "2"
# Read the clipboard via OS APIs (NSPasteboard / Win32) instead of
# `navigator.clipboard.readText()`. The webview's clipboard-read API is
# gated by a per-call user-consent UI in production builds (macOS
# Sonoma's "Paste" pill on WKWebView, WebView2's "wants to view text"
# modal on Windows with the tauri.localhost origin). Reading from Rust
# bypasses that prompt entirely.
tauri-plugin-clipboard-manager = "2"
rand = "0.8"
# Used in the Stronghold plugin's password-hash function: the boot
# password file holds 64 hex chars, which we decode back to the 32 raw
# bytes the snapshot KeyProvider expects.
hex = "0.4"
russh = "0.49"
russh-keys = "0.49"
async-trait = "0.1"
bytes = "1"
zeroize = { version = "1.8", features = ["zeroize_derive", "alloc"] }

# portable-pty's transitive `termios 0.2.2` has no iOS/Android support,
# and there is no local-PTY story on those targets anyway (sandbox
# forbids fork/exec for App-Store binaries). Pull it in only on desktop.
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
portable-pty = "0.8"
# The updater is desktop-only (no in-place self-update on iOS/Android,
# where app distribution goes through the stores). Keep it off mobile so
# the plugin and its libsodium/HTTP deps don't get pulled in there.
tauri-plugin-updater = "2"

# On Windows, select the `link-static` feature. The vendored
# libghostty-vt-sys build script's *dynamic* matcher only recognizes
# ELF/Mach-O shared libs (`.so`/`.dylib`), so without this the build
# panics with "no libghostty-vt shared library found". The static path
# matches `ghostty-vt-static.lib` (which Zig does produce on Windows)
# and the build succeeds. NOTE: this does NOT yield a self-contained
# exe — the sys build script emits `cargo:rustc-link-lib=static=ghostty-vt`,
# and the MSVC linker resolves that through Zig's import lib
# `ghostty-vt.lib`, so prmpt.exe keeps a runtime dependency on
# `ghostty-vt.dll`. That DLL is staged by build.rs and bundled next to
# the executable via tauri.windows.conf.json. Cargo unions features, so
# this only adds `link-static` on the Windows leg.
[target.'cfg(windows)'.dependencies]
libghostty-vt = { version = "0.1", features = ["link-static"] }
libghostty-vt-sys = { version = "0.1", features = ["link-static"] }

# Source both libghostty crates from the pinned `libghostty-rs` git
# submodule (vendor/libghostty-rs) rather than crates.io. Our build.rs
# changes live as a reviewable patch, applied onto the submodule by
# `bun run setup-vendor` — run that before the first `cargo check`.
# Both crates are patched together so the high-level API and the FFI
# bindings stay ABI-consistent. See src-tauri/vendor/README.md.
[patch.crates-io]
libghostty-vt = { path = "vendor/libghostty-rs/crates/libghostty-vt" }
libghostty-vt-sys = { path = "vendor/libghostty-rs/crates/libghostty-vt-sys" }

# Stronghold's internal scrypt key derivation is unusably slow when built
# with debug optimizations — `Stronghold.load()` then takes 1–2 minutes,
# which is what was timing out the JS bootstrap. Forcing scrypt (and its
# dependencies) to opt-level 3 in dev brings it back to milliseconds. This
# is the documented upstream workaround for tauri-plugin-stronghold.
[profile.dev.package.scrypt]
opt-level = 3

[profile.dev.package.salsa20]
opt-level = 3

[profile.dev.package.sha2]
opt-level = 3

[profile.dev.package.pbkdf2]
opt-level = 3

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSImage",
    "NSBitmapImageRep",
    "NSGraphicsContext",
    "NSGraphics",
    "NSImageRep",
    "NSColor",
] }
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSGeometry",
    "NSData",
] }
# Keychain Services for the Stronghold boot key. See src/secure_store/macos.rs.
security-framework = "3"

[target.'cfg(target_os = "ios")'.dependencies]
# Same crate compiles for iOS; backs onto the iOS Keychain.
security-framework = "3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Credentials",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# Stores the boot key in the Secret Service (libsecret / GNOME Keyring /
# KWallet via D-Bus). When no daemon is running the backend reports
# Unavailable and we fall back to the legacy file. The crate's
# `rt-tokio-crypto-rust` feature picks the existing tokio runtime + a
# pure-Rust crypto stack so we don't pull in system OpenSSL.
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }

# Select `link-static` on Linux too. With the default *dynamic* link
# the binary gets `NEEDED: libghostty-vt.so.0` but no RUNPATH, and
# nothing stages the Zig-built .so into a loader-visible location (the
# macOS path solves this with bundle.macOS.frameworks; there is no
# Linux equivalent). linuxdeploy then aborts AppImage bundling with
# "Could not find dependency: libghostty-vt.so.0", and the .deb/.rpm
# binaries are equally unrunnable (the lib is simply missing at
# runtime). Static linking folds the self-contained
# `ghostty-vt-static.a` into the executable: no .so dependency,
# AppImage/deb/rpm all build and run. macOS deliberately stays on the
# dynamic + Frameworks path (its build.rs/dyld handling is
# macOS-specific). Cargo unions features, so this only adds
# `link-static` on the Linux leg.
libghostty-vt = { version = "0.1", features = ["link-static"] }
libghostty-vt-sys = { version = "0.1", features = ["link-static"] }
